	Check whether event exists (#1014414). 
	* src/plugins/IndivComplete.py (write_alt_names): Correct the
	use of handle (#1014411); (write_fact, write_sources, write_person): 
	Use gramps id, not handle, for displaying source references.
	* src/plugins/Ancestors.py (event_info): Check whether place
	exists before getting its title (#1014412).

2004-08-23  Tim Waugh  <twaugh@redhat.com>
	* install-sh: Removed this generated file.

	* src/WriteGedcom.py (GedcomWriter.write_sources): Write sources
	in ID order for easier change tracking.

	* src/WriteXML.py (XmlWriter.write_xml_data): Use GRAMPS ID not DB
	handle.
	(XmlWriter.dump_source_ref): Likewise.
	(XmlWriter.write_ref): Fixed typo.

	* src/GrampsDbBase.py (GrampsDbBase.find_source_from_handle): Set
	GRAMPS ID on new source (bug #1014246).

2004-08-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Marriage.py: pychecker fixes
	* src/RelLib.py: pychecker fixes
	* src/SelectChild.py: pychecker fixes
	* src/SelectObject: pychecker fixes
	* src/SourceView.py: pychecker fixes
	* src/Sources.py: pychecker fixes
	* src/StyleEditor.py: pychecker fixes
	* src/TarFile.py: pychecker fixes
	* src/TipOfDay.py: pychecker fixes
	* src/Utils.py: pychecker fixes
	* src/WriteXML.py: pychecker fixes

2004-08-23  Tim Waugh  <twaugh@redhat.com>
	* src/WriteGedcom.py (GedcomWriter.write_families): Write families
	in GRAMPS ID order for easier change tracking.

2004-08-22  Tim Waugh  <twaugh@redhat.com>
	* src/WriteGedcom.py (GedcomWriter.export_data): Write individuals
	out in GRAMPS ID order.
	(GedcomWriter.fid): Use GRAMPS ID not DB handle.

	* src/ReadXML.py (GrampsParser.start_object): Set GRAMPS ID.

	* src/WriteXML.py (write_xml_data): Fixed typo causing XML export to
	omit all place definitions.
	(XmlWriter.write_xml_data): Sort person IDs before writing.
	(XmlWriter.write_xml_data): Fixed people output by preventing
	confusion between handles and GRAMPS IDs.