@@ -363,11 +363,11 @@ try:
     mtype = GrampsMime.get_description('text/plain')
 
     if Utils.search_for(mprog[0]):
-        print_label=_("Open in %s" % mprog[1])
+        print_label=_("Open in %s") % mprog[1]
     else:
         print_label=None
 
     Plugins.register_text_doc(mtype,AsciiDoc,1,1,1,".txt", print_label)
 except:
-    Plugins.register_text_doc("Plain Text",AsciiDoc,1,1,1,".txt", None)
+    Plugins.register_text_doc(_("Plain Text"),AsciiDoc,1,1,1,".txt", None)
 
