@@ -583,24 +583,17 @@ print_label = None
 try:
     import Utils
 
-    prog = GrampsMime.get_application("application/pdf")
-    type = GrampsMime.get_description("application/pdf")
+    mprog = GrampsMime.get_application("application/pdf")
+    mtype = GrampsMime.get_description("application/pdf")
     
-    if Utils.search_for(prog[0]):
-        print_label=_("Open in %s") % prog[1]
+    if Utils.search_for(mprog[0]):
+        print_label=_("Open in %s") % mprog[1]
     else:
         print_label=None
-    Plugins.register_text_doc(type, PdfDoc, 1, 0, 1, ".pdf", print_label)
-    Plugins.register_draw_doc(type, PdfDoc, 1, 1,    ".pdf", print_label)
+    Plugins.register_text_doc(mtype, PdfDoc, 1, 0, 1, ".pdf", print_label)
+    Plugins.register_draw_doc(mtype, PdfDoc, 1, 1,    ".pdf", print_label)
+    Plugins.register_book_doc(mtype,classref=PdfDoc,table=1,paper=1,style=1,ext=".pdf",print_label)
 except:
-    Plugins.register_text_doc('PDF document', PdfDoc, 1, 0, 1,".pdf", None)
-    Plugins.register_draw_doc('PDF document', PdfDoc,  1, 1,   ".pdf", None)
-
-Plugins.register_book_doc(
-    name=_("PDF"),
-    classref=PdfDoc,
-    table=1,
-    paper=1,
-    style=1,
-    ext=".pdf"
-    )
+    Plugins.register_text_doc(_('PDF document'), PdfDoc, 1, 0, 1,".pdf", None)
+    Plugins.register_draw_doc(_('PDF document'), PdfDoc, 1, 1,   ".pdf", None)
+    Plugins.register_book_doc(name=_("PDF document"),classref=PdfDoc,table=1,paper=1,style=1,ext=".pdf")
