@@ -431,4 +431,4 @@ try:
         print_label=None
     Plugins.register_text_doc(mtype, RTFDoc, 1, 0, 1, ".rtf", print_label)
 except:
-    Plugins.register_text_doc('RTF document', RTFDoc, 1, 0, 1, ".rtf", None)
+    Plugins.register_text_doc(_('RTF document'), RTFDoc, 1, 0, 1, ".rtf", None)
